--- a/client/src/components/layout/Admin/styles.css
+++ b/client/src/components/layout/Admin/styles.css
@@ -1,47 +1,3 @@
-/* .admin-container {
-  width: 90%;
-
-  display: flex;
-  flex-direction: column;
-} */
-
-/* .admin-form-table {
-  margin-top: 1.5rem;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.admin-table {
-  padding: 1rem;
-  border-collapse: collapse;
-
-  font-size: 1rem;
-}
-
-.admin-table th {
-  padding: 0.5rem 1rem;
-  border: 1px solid black;
-
-  width: 10rem;
-  font-size: 1.2rem;
-  text-align: center;
-}
-
-.admin-table tr {
-  border: none;
-}
-
-.admin-table td {
-  padding: 0.5rem 1rem;
-  border: 1px solid black;
-
-  width: 10rem;
-  font-size: 1.2rem;
-  text-align: center;
-} */
-
 .table-btn {
   width: 5rem;
   color: white;
@@ -65,26 +21,12 @@
   background-color: lightgray;
 }
 
-.btn-create-user {
-  font-family: 'Source Sans Pro', 'Arial', sans-serif;
-  text-decoration: none;
-  text-align: center;
-  opacity: 0.8;
-  color: white;
-  border-radius: 20px;
-
-  margin-left: 2rem;
-  font-size: 1rem;
-  width: 120px;
-
-  border: none;
-}
-
 .admin-table-input {
   font-size: 1.2rem;
-  width: 7rem;
+  width: 6rem;
 }
 
+/* admin form, for CreateUserForm component. */
 .admin-form {
   width: 100%;
 }
